Oct 15 - Let's Go

--- a/src/app/spotbie/features/business-features/business-features.component.html
+++ b/src/app/spotbie/features/business-features/business-features.component.html
@@ -19,26 +19,22 @@
 <div class="sb-homePageIconsTable mt-4 mb-4">
     <div>
         <img src="assets/images/home_imgs/find-places-to-eat.svg" />
-        <h2>FOOD</h2>
     </div>
     <div>
         <img src="assets/images/home_imgs/find-events.svg" />
-        <h2>EVENTS</h2>
     </div>        
     <div>
         <img src="assets/images/home_imgs/find-places-for-shopping.svg" />
-        <h2>SHOPPING</h2>
     </div>                        
 </div>
 
-<img class="mb-4 sb-readImage cursor-pointer" style="margin-top: 0%;"
-        src="assets/images/home_imgs/jpg/spotbie-find-restaurant-customers-near-you.jpg" 
-        alt="Image of person enjoying some beer being served." />
+<div class="mb-4 sb-readImage cursor-pointer" 
+        id="sbReadImageRestaurants"></div>
         
 <img class='sb-greenIcon' src='assets/images/home_imgs/spotbie-green-icon.svg' />            
 
 <h4 class="text-uppercase">
-    APPEAL TO HUNGRY CUSTOMERS
+    HUNGRY CUSTOMERS
 </h4>
 
 <p class="mt-2 mb-2">
@@ -60,14 +56,14 @@
     <span>GET STARTED</span>
 </button>
 
-<img class="mb-4 sb-readImage cursor-pointer" style="margin-top: 0%;"
-        src="assets/images/home_imgs/jpg/spotbie-miami-events.jpg" 
-        alt="Image of people attending an event and having a great time."/>  
+<div class="mb-4 sb-readImage cursor-pointer" 
+        id="sbReadImageEvents"        
+        style="margin-top: 0%;"></div>  
 
 <img class='sb-greenIcon' src='assets/images/home_imgs/spotbie-green-icon.svg' />
 
 <h4 class="text-uppercase">
-    FIND PEOPLE FOR YOUR EVENTS
+    FOR YOUR EVENTS
 </h4>
 
 <p class="mt-2 mb-2">
@@ -87,15 +83,13 @@
     <span>GET STARTED</span>
 </button>
 
-<img class="mb-4 sb-readImage cursor-pointer" 
-        style="margin-top: 0%;"
-        src="assets/images/home_imgs/jpg/spotbie-find-customers-near-you.jpg" 
-        alt="Picture of two women shopping in a mall."/>
+<div class="mb-4 sb-readImage cursor-pointer" 
+        id="sbReadImageShopping"></div>
 
 <img class='sb-greenIcon' src='assets/images/home_imgs/spotbie-green-icon.svg' />
 
 <h4 class="text-uppercase">
-    BRING MORE CUSTOMERS
+    MORE CUSTOMERS
 </h4>
 
 <p class="mt-2 mb-2">
@@ -113,7 +107,5 @@
     <span>GET STARTED</span>
 </button>  
 
-<img class="mb-4 sb-readImage cursor-pointer"
-        style="margin-top: 0%;"
-        src="assets/images/home_imgs/jpg/spotbie-miami-find-new-friends.jpg" 
-        alt="Picture of group of friends in a circle playing cards at the beach." />
+<div class="mb-4 sb-readImage cursor-pointer"
+        id="sbReadImageUsers"></div>
