--- a/src/app/spotbie/spotbie-logged-in/ad-manager/ad-manager.component.html
+++ b/src/app/spotbie/spotbie-logged-in/ad-manager/ad-manager.component.html
@@ -7,7 +7,7 @@
         </h5>
 
         <p class="spotbie-text-gradient text-center">
-            Create an ad with SpotBie and generate local exposure.
+            Create an Ad with SpotBie and generate local exposure.
         </p>
         
         <div class="spotbie-button text-uppercase" (click)="openAdEditor()" *ngIf="!adEditor && userAdList.length < 8">
