--- a/src/app/spotbie/spotbie-logged-in/user-dashboard/user-dashboard.component.html
+++ b/src/app/spotbie/spotbie-logged-in/user-dashboard/user-dashboard.component.html
@@ -21,6 +21,24 @@
 
     </div>    
 
+    <div class="sb-dashboardWrapper">
+
+        <h6 class='sb-text-light-green-gradient mb-3'>GET WHAT YOU WANT</h6>
+
+        <div class='sb-optionGet' (click)="spawnCategories('shopping')">
+            <img src="assets/images/home_imgs/find-places-to-eat.svg" />
+        </div>
+
+        <div class='sb-optionGet' (click)="spawnCategories('events')">
+            <img src="assets/images/home_imgs/find-events.svg" />
+        </div>  
+
+        <div class='sb-optionGet' (click)="spawnCategories('food')">
+            <img src="assets/images/home_imgs/find-places-for-shopping.svg" />
+        </div>                        
+
+    </div>
+
     <div class="sb-dashboardWrapper" #lpAppAnchor>
         <app-loyalty-points [fullScreenWindow]="false" #loyaltyPointsApp></app-loyalty-points>
     </div>
