--- a/src/app/spotbie/spotbie-logged-out/sign-up/sign-up.component.html
+++ b/src/app/spotbie/spotbie-logged-out/sign-up/sign-up.component.html
@@ -180,7 +180,7 @@
                 spotbie-padding
                 spotbie-text-link"
         *ngIf="business"
-        click)="usersHome()">
+        (click)="usersHome()">
         CLICK HERE FOR NON-BUSINESS USERS
     </div>
 
