--- a/src/app/spotbie/features/business-features/business-features.component.css
+++ b/src/app/spotbie/features/business-features/business-features.component.css
@@ -7,3 +7,16 @@
 h4{
     cursor: default
 }
+#sbReadImageRestaurants{
+    background: url('../../../../assets/images/home_imgs/jpg/spotbie-find-restaurant-customers-near-you.jpg')
+}
+#sbReadImageEvents
+{
+    background: url('../../../../assets/images/home_imgs/jpg/spotbie-miami-events.jpg')
+}
+#sbReadImageShopping{
+    background: url('../../../../assets/images/home_imgs/jpg/spotbie-find-customers-near-you.jpg')
+}
+#sbReadImageUsers{
+    background: url('../../../../assets/images/home_imgs/jpg/spotbie-miami-find-new-friends.jpg')    
+}
