--- a/src/app/spotbie/spotbie-logged-in/reward-menu/reward-menu.component.css
+++ b/src/app/spotbie/spotbie-logged-in/reward-menu/reward-menu.component.css
@@ -78,7 +78,6 @@
     overflow: hidden;
     font-size: .8rem;
 }
-
 @media (max-width: 1024px){
     .sb-menuItemWrapper{
         width: 96%;
@@ -96,17 +95,37 @@
     p{
         font-size:.8rem;
     }
+    .spotbie-loyaltyMenuDescription{
+        max-width: 94%;
+        width: 94%;
+    }
+    .sb-menuItemWrapper{
+        max-width: 87%;
+        width: 87%;
+        min-width: 87%;
+    }
     .sb-menuItem,
     .sb-addMenuItem{
         max-width: 48%;
         width: 48%;
         min-width: 48%;
-        height: 48vw;
-        min-height: 48vw;
-        max-height: 48vw;
-        font-size: .8rem;
+        height: 43vw;
+        min-height: 43vw;
+        max-height: 43vw;
+        font-size: .8rem;    
     }
+    .sb-addMenuItem{
+        position: relative;
+        margin: 0 auto;
+        font-size: 1rem;
+        height: 100px;
+        min-height: 100px;
+        max-height: 100px;        
+        display: block;
+        border: unset;    
+        background: unset;
+    }    
     .sb-addMenuItem h6{
-        font-size: .6rem;
+        font-size: .8rem;
     }
 }
