--- a/src/app/spotbie/spotbie-logged-in/user-dashboard/user-dashboard.component.css
+++ b/src/app/spotbie/spotbie-logged-in/user-dashboard/user-dashboard.component.css
@@ -18,7 +18,21 @@ h3{
     margin-bottom: 70px;
     cursor: pointer;
 }
-
+.sb-optionGet{
+    position: relative;
+    display: inline-block;
+    margin-left: 1.5%;
+    margin-right: 1.5%;
+    min-width: 24%;
+    width: 24%;
+    max-width: 24%;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+.sb-optionGet i{
+    font-size: 45px;
+    color: white;
+}
 @media (max-width: 768px){
     .sb-qrImage {
         width: 150px;
