--- a/src/app/spotbie/features/user-features/user-features.component.html
+++ b/src/app/spotbie/features/user-features/user-features.component.html
@@ -20,13 +20,13 @@
 </p>
 
 <div class="sb-homePageIconsTable mt-4 mb-4">
-    <div>
+    <div (click)="spawnCategories('food')">
         <img src="assets/images/home_imgs/find-places-to-eat.svg" />
     </div>
-    <div>
+    <div (click)="spawnCategories('events')">
         <img src="assets/images/home_imgs/find-events.svg" />
     </div>        
-    <div>
+    <div (click)="spawnCategories('shopping')">
         <img src="assets/images/home_imgs/find-places-for-shopping.svg" />
     </div>                        
 </div>
